--- a/slider/slide07.html
+++ b/slider/slide07.html
@@ -169,7 +169,7 @@
             }
 
             currentIndex++;
-            sliderImg.animate({marginLeft:-(slideWidth * currentIndex)+"px"}, 400); //"margin-left"를 카멜방식으로 써서 ""와 -가 없어짐.
+            sliderImg.animate({"margin-left":-(slideWidth * currentIndex)+"px"}, 400); //"margin-left"를 카멜방식으로 써서 ""와 -가 없어짐.
         };
 
         //버튼 클릭하기
