--- a/port/ifr/slider/slide07.html
+++ b/port/ifr/slider/slide07.html
@@ -87,6 +87,31 @@
         .slider-btn a.next {
             right: 0;
         }
+
+        @media (max-width: 446px) {
+            .slider-wrap {
+                width: 430px;
+                top: 55%;
+            }
+            .slider-img {
+                width: 1503.3333px;
+            }
+            .slider-img .slides {
+                width: 150.3333px;
+                padding: 3px;
+            }
+            .slider-btn a {
+                top: 43%;
+                padding: 10px;
+            }
+            .slider-btn a.prev {
+                right: 17%;
+                left: auto;
+            }
+            .slider-btn a.next {
+                right: 3%;
+            }
+        }
     </style>
 </head>
 <body>
