--- a/port/ifr/slider/slide08.html
+++ b/port/ifr/slider/slide08.html
@@ -108,6 +108,12 @@
         .slider-dot a.active {
             background: rgba(255,255,255,0.9);
         }
+
+        @media (max-width: 446px) {
+            .slider-btn a {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
