--- a/port/ifr/slider/slide06.html
+++ b/port/ifr/slider/slide06.html
@@ -83,6 +83,11 @@
         .slider-btn a.next {
             right: 0;
         }
+        @media (max-width: 446px) {
+            .slider-btn a {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
