--- a/port/ifr/slider/slide07.html
+++ b/port/ifr/slider/slide07.html
@@ -89,19 +89,22 @@
         }
 
         @media (max-width: 446px) {
+            * {
+                box-sizing: content-box;
+            }
             .slider-wrap {
-                width: 430px;
-                top: 55%;
+                width: 441px;
+                top: 68%;
             }
             .slider-img {
-                width: 1503.3333px;
+                width: 1470px;
             }
             .slider-img .slides {
-                width: 150.3333px;
-                padding: 3px;
+                width: 137px;
+                padding: 5px;
             }
             .slider-btn a {
-                top: 43%;
+                top: 53%;
                 padding: 10px;
             }
             .slider-btn a.prev {
