--- a/port/ifr/slider/slide07.html
+++ b/port/ifr/slider/slide07.html
@@ -93,15 +93,20 @@
                 box-sizing: content-box;
             }
             .slider-wrap {
-                width: 441px;
+                /* width: 441px; */
+                /* 브라우저 446px일 때의 441px  */
+                width: 98.879vw;
                 top: 68%;
             }
             .slider-img {
-                width: 1470px;
+                /* width: 1470px; */
+                width: 329.596vw;
             }
             .slider-img .slides {
-                width: 137px;
-                padding: 5px;
+                /* width: 137px; */
+                width: 30.717vw;
+                /* padding: 5px; */
+                padding: 1.121vw;
             }
             .slider-btn a {
                 top: 53%;
