--- a/port/ifr/parallax/parallax3.html
+++ b/port/ifr/parallax/parallax3.html
@@ -197,6 +197,54 @@
             position: absolute; right: 10px; top: 20px;
             cursor: pointer;
         }
+
+        @media (max-width: 446px) {
+            .title {
+                top: 23%;
+            }
+            .title h1 {
+                margin-bottom: 10px;
+                font-size: 18px;
+            }
+            .title p {
+                font-size: 18px;
+            }
+            .title ul {
+                padding: 10px 0;
+            }
+            .content-item-num {
+                left: 0;
+                right: auto;
+            }
+            .content-item-title {
+                text-align: left;
+            }
+            .content-item-imgWrap {
+                --width: 92%;
+                width: var(--width);
+            }
+            .content-item-desc {
+                text-align: left;
+                margin-top: -3vw;
+                margin-left: 0;
+            }
+            .content-item:nth-child(even) {
+                margin-left: 0;
+            }
+            .content-item:nth-child(even) .content-item-num {
+                right: auto;
+                left: 0;
+            }
+            .content-item:nth-child(even) .content-item-desc {
+                margin-left: 0;
+            }
+            .info {
+                display: none;
+            }
+            #wrap h1 {
+                font-size: 13vw;
+            }
+        }
     </style>
 
     <link rel="stylesheet" href="../mouse/prism.css">
@@ -204,7 +252,7 @@
 <body>
     <div class="title">
         <h1>Parallax01</h1>
-        <p>Parallax Effect<br>-jQuery</p>
+        <p>-jQuery</p>
         <ul>
             <li class="active"><a href="parallax3.html">parallax01</a></li>
             <li><a href="parallax4.html">parallax02</a></li>
