--- a/port/ifr/parallax/parallax3.html
+++ b/port/ifr/parallax/parallax3.html
@@ -215,12 +215,13 @@
             .content-item-num {
                 left: 0;
                 right: auto;
+                opacity: 0.1;
             }
             .content-item-title {
                 text-align: left;
             }
             .content-item-imgWrap {
-                --width: 92%;
+                --width: 89%;
                 width: var(--width);
             }
             .content-item-desc {
