--- a/port/index5.html
+++ b/port/index5.html
@@ -766,6 +766,9 @@
                         </div>
                         <span>click</span>
                     </div>
+                    <div class="notice">
+                        모바일에서는 Mouse를 Touch로 대신하기에 Mouse의 움직임을 표현할 수 없으므로 <strong>PC의 Chrome 브라우저</strong>로 확인 해주세요. 
+                    </div>
                     <div class="click-wrap">
                         <div class="close">close</div>
                         <div class="click-cont">
