--- a/port/index5.html
+++ b/port/index5.html
@@ -747,6 +747,8 @@
                                 <a class="slidebtn" href="#">06</a>
                                 <a class="slidebtn" href="#">07</a>
                                 <a class="slidebtn" href="#">08</a>
+                                <a class="slidebtn" href="#">09</a>
+                                <a class="slidebtn" href="#">10</a>
                             </div>
                         </div>
                     </div>
