--- a/port/ifr/parallax/parallax8.html
+++ b/port/ifr/parallax/parallax8.html
@@ -434,6 +434,66 @@
             position: absolute; right: 10px; top: 20px;
             cursor: pointer;
         }
+
+        @media (max-width: 446px) {
+            .title {
+                top: 23%;
+            }
+            .title h1 {
+                margin-bottom: 10px;
+                font-size: 18px;
+            }
+            .title p {
+                font-size: 18px;
+            }
+            .title ul {
+                padding: 10px 0;
+            }
+            .content-item-num {
+                left: 0;
+                right: auto;
+                opacity: 0.1;
+            }
+            .content-item-title {
+                text-align: left;
+            }
+            .content-item-imgWrap {
+                --width: 89%;
+                width: var(--width);
+            }
+            .content-item-desc {
+                text-align: left;
+                margin-top: -3vw;
+                margin-left: 0;
+            }
+            #section1 .content-item-desc span,
+            #section2 .content-item-desc span,
+            #section3 .content-item-desc span,
+            #section4 .content-item-desc span,
+            #section5 .content-item-desc span,
+            #section6 .content-item-desc span,
+            #section7 .content-item-desc span,
+            #section8 .content-item-desc span,
+            #section9 .content-item-desc span {
+                min-width: 3px;
+            }
+            .content-item:nth-child(even) {
+                margin-left: 0;
+            }
+            .content-item:nth-child(even) .content-item-num {
+                right: auto;
+                left: 0;
+            }
+            .content-item:nth-child(even) .content-item-desc {
+                margin-left: 0;
+            }
+            .info {
+                display: none;
+            }
+            #wrap h1 {
+                font-size: 13vw;
+            }
+        }
     </style>
 
     <link rel="stylesheet" href="../mouse/prism.css">
