--- a/port/ifr/mouse/mouse01.html
+++ b/port/ifr/mouse/mouse01.html
@@ -110,7 +110,7 @@
     }
 
     .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
-    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
+    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
     .infor4 .modal {
         background: rgba(0,0,0,0.8);
         width: 100%;
@@ -125,6 +125,17 @@
     }
     .infor4 .modal .close {
         position: absolute; right: 10px; top: 20px;
+    }
+
+    @media (max-width: 446px) {
+        .info3 {
+            display: none;
+        }
+        .infor4 {
+            left: auto;
+            right: 0;
+            bottom: 2%;
+        }
     }
     </style>
 
