--- a/port/ifr/parallax/parallax5.html
+++ b/port/ifr/parallax/parallax5.html
@@ -210,6 +210,9 @@
             .title ul {
                 padding: 10px 0;
             }
+            .infor4 {
+                bottom: 2%;
+            }
             .content-item-num {
                 left: 0;
                 right: auto;
