--- a/port/ifr/parallax/parallax9.html
+++ b/port/ifr/parallax/parallax9.html
@@ -305,6 +305,10 @@
             }
             .content-item-img {
                 width: 100%;
+                --overflow: 0px;
+            }
+            .reveal img {
+                width: 100%;
             }
             .content-item-desc {
                 width: 78%;
