--- a/port/ifr/mouse/mouse01.html
+++ b/port/ifr/mouse/mouse01.html
@@ -22,7 +22,7 @@
     * {margin: 0; padding: 0; box-sizing: border-box;}
     a {text-decoration: none; color: #fff;}
     img {width: 100%; vertical-align: top;}
-    ul {padding:10px 20px;}
+    .info ul, .info2 ul {padding:10px 20px;}
     body {
         background: url(../slider/img/p11.jpg) no-repeat center center;
         background-size: cover;
@@ -128,6 +128,12 @@
     }
 
     @media (max-width: 446px) {
+        .info2 {
+            padding: 0;
+        }
+        .info2 ul {
+            padding: 20px 20px;
+        }
         .info3 {
             display: none;
         }
