--- a/port/ifr/mouse/mouse01.html
+++ b/port/ifr/mouse/mouse01.html
@@ -142,6 +142,10 @@
             right: 0;
             bottom: 2%;
         }
+        .contents p {
+            max-width: 92vw;
+            font-size: 4vw;
+        }
     }
     </style>
 
