--- a/port/ifr/mouse/mouse01.html
+++ b/port/ifr/mouse/mouse01.html
@@ -128,6 +128,9 @@
     }
 
     @media (max-width: 446px) {
+        body {
+            background: url(../slider/img/p11.jpg) no-repeat left center;
+        }
         .info2 {
             padding: 0;
         }
