--- a/port/ifr/mouse/mouse02.html
+++ b/port/ifr/mouse/mouse02.html
@@ -139,6 +139,27 @@
     .infor4 .modal .close {
         position: absolute; right: 10px; top: 20px;
     }
+
+    @media (max-width: 446px) {
+        .info2 {
+            padding: 0;
+        }
+        .info2 ul {
+            padding: 20px 20px;
+        }
+        .info3 {
+            display: none;
+        }
+        .infor4 {
+            left: auto;
+            right: 0;
+            bottom: 2%;
+        }
+        .contents p {
+            max-width: 92vw;
+            font-size: 4vw;
+        }
+    }
     </style>
 
     <link rel="stylesheet" href="prism.css">
