--- a/port/ifr/mouse/mouse03.html
+++ b/port/ifr/mouse/mouse03.html
@@ -119,7 +119,7 @@
     }
     
     .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
-    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
+    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
     .infor4 .modal {
         background: rgba(0,0,0,0.8);
         width: 100%;
@@ -134,6 +134,39 @@
     }
     .infor4 .modal .close {
         position: absolute; right: 10px; top: 20px;
+    }
+
+    @media (max-width: 446px) {
+        .info2 {
+            padding: 0;
+        }
+        .info2 ul {
+            padding: 20px 20px;
+        }
+        .info3 {
+            display: none;
+        }
+        .infor4 {
+            left: auto;
+            right: 0;
+            bottom: 2%;
+        }
+        .contents {
+            width: 90%;
+            margin-top: 20%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            height: auto;
+            align-items: unset;
+            justify-content: unset;
+        }
+        .contents p {
+            max-width: 92vw;
+            font-size: 4vw;
+            margin-bottom: 5%;
+        }
     }
     </style>
 
