--- a/port/ifr/mouse/mouse04.html
+++ b/port/ifr/mouse/mouse04.html
@@ -150,7 +150,7 @@
     }
     
     .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
-    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
+    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
     .infor4 .modal {
         background: rgba(0,0,0,0.8);
         width: 100%;
@@ -165,6 +165,34 @@
     }
     .infor4 .modal .close {
         position: absolute; right: 10px; top: 20px;
+    }
+
+    @media (max-width: 446px) {
+        .info2 {
+            padding: 0;
+        }
+        .info2 ul {
+            padding: 20px 20px;
+        }
+        .info3 {
+            display: none;
+        }
+        .infor4 {
+            left: auto;
+            right: 0;
+            bottom: 2%;
+        }
+        .contents p {
+            max-width: 92vw;
+            font-size: 3vw;
+            margin-bottom: 2%;
+        }
+        .move-image .mtext {
+            transform: translate3d(-50%, 50%, 40px);
+        }
+        .cursor strong {
+            display: none;
+        }
     }
     </style>
 
