--- a/port/ifr/mouse/mouse05.html
+++ b/port/ifr/mouse/mouse05.html
@@ -160,7 +160,7 @@
     
     /* 모달 */
     .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
-    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
+    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
     .infor4 a.axis {
         color: #fff; border: 1px solid #fff;
         border-radius: 30px; padding: 5px 30px;
@@ -182,6 +182,30 @@
     }
     .infor4 .modal .close {
         position: absolute; right: 10px; top: 20px;
+    }
+
+    @media (max-width: 446px) {
+        .info2 {
+            padding: 0;
+        }
+        .info2 ul {
+            padding: 20px 20px;
+        }
+        .info3 {
+            display: none;
+        }
+        .infor4 {
+            left: auto;
+            right: 0;
+            bottom: 2%;
+        }
+        .infor4 a.axis {
+            display: none;
+        }
+        .contents p {
+            max-width: 92vw;
+            font-size: 4vw;
+        }
     }
     </style>
 
