--- a/port/ifr/mouse/mouse06.html
+++ b/port/ifr/mouse/mouse06.html
@@ -148,7 +148,7 @@
     
     /* 모달 */
     .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
-    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
+    .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 10px}
     /* .infor4 a.axis {
         display: inline-block;
         color: #fff; border: 1px solid #fff;
@@ -171,6 +171,28 @@
     }
     .infor4 .modal .close {
         position: absolute; right: 10px; top: 20px;
+    }
+
+    @media (max-width: 446px) {
+        .info2 {
+            padding: 0;
+        }
+        .info2 ul {
+            padding: 20px 20px;
+        }
+        .info3 {
+            display: none;
+        }
+        .infor4 {
+            left: auto;
+            right: 0;
+            bottom: 2%;
+        }
+        .contents p {
+            max-width: 77vw;
+            font-size: 4vw;
+            margin-top: 4%;
+        }
     }
     </style>
 
